src/main/java/org/example/profiruparser/errors/SearchException.java
package org.example.profiruparser.errors;

public class SearchException extends Exception {
    public SearchException(String message) {
        super(message);
    }
}





